package edu.ubp.doo.modelo;

public interface FabricaProducto {
    public Producto getTv();
    public Producto getInternet();
}
