package edu.ubp.doo.modelo;

public interface Producto {
 
    public String getNombre();
    
    public float getPrecio();
    
    public String getCaracteristica();
    
    public TipoPlan getTipoPlan();
    
}
